<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/colorPrimaryDark"
    tools:context=".views.user.UserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_view_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/btn_edit_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_edit_24"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/iv_user"
            app:layout_constraintStart_toEndOf="@id/iv_user"/>

        <TextView
            android:id="@+id/tv_full_name_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            tools:text="Full Name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_user"/>

        <TextView
            android:id="@+id/tv_email_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            tools:text="Email"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_full_name_user"/>

        <Button
            android:id="@+id/btn_change_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn_primary"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_change_password"/>

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_btn_primary"
            android:text="@string/change_password"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/btn_logout" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn_logout"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>